fix menu overlap issue

--- a/all/css/theme.0.2.0.css
+++ b/all/css/theme.0.2.0.css
@@ -381,7 +381,6 @@ select:focus::-ms-value {
 .c-forum-deck {
 	display: block;
 	transition: 0.35s ease-in-out;
-	transform: scaleY(1);
 	transform-origin: center top;
 }
 
@@ -755,6 +754,7 @@ select:focus::-ms-value {
 	transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
 	transition: all 0.2s ease;
 	transform: scale(0);
+	transform-origin: left top;
 	will-change: box-shadow;
 }
 
@@ -1630,7 +1630,7 @@ select:focus::-ms-value {
 
 .c-footer {
 	text-align: center;
-	margin: 4rem 0 3rem;
+	margin: 4rem 0 5rem;
 }
 
 .c-footer-nav-link {
